Stylesheet ToC, hours cal style, /pages text

--- a/pages/about/accessibility.html
+++ b/pages/about/accessibility.html
@@ -19,7 +19,7 @@ redirect_from:
 <li>Alternative text for media where appropriate;</li>
 <li>A skip link at the beginning of each page to jump to the page's main content;</li>
 <li><a href="http://www.w3.org/TR/wai-aria/roles">ARIA roles</a> to better describe the purpose and content of various parts of our pages;</li>
-<li>Text alternatives for image links.</li>
+<li>Alt text for images</li>
 </ul>
 
 <p>We use several tools to assess accessibility on our site, including the <a href="http://wave.webaim.org/">Wave evaluation tool</a> by <a href="http://webaim.org">WebAIM</a> and <a href="http://pa11y.org/">Pa11y command line interface tool</a> by <a href="https://github.com/nature">Nature Publishing Group</a>.</p>
@@ -30,19 +30,23 @@ redirect_from:
 
 <p>If you have suggestions for improvement, or encounter anything that hinders your use of the content or tool we provide, please <a href="mailto:scholarslab@virginia.edu">email us</a>.</p>
 
-<h2>Physical accessbility</h2>
+<h2>Physical accessibility</h2>
 
 <h3>Illness</h3>
+If you have questions about or anticipate any issues with full access of our space and services, please <a href="mailto:scholarslab@virginia.edu">contact us</a> so we can help. We appreciate knowing where we can make improvements to increase our accessibility. Letting us know also allows us to put stories and numbers in support of accessibility improvements the university is aware are needed, but which don't yet have funding and/or are farther down the queue than other projects.
+
 <p><a href="https://uvamagazine.org/articles/uva_drops_mandates_for_vaccines_indoor_masking">UVA does not currently require in classrooms or public spaces</a>, though these recomain recommended as an effective precautionary measure against spreading COVID-19, colds, flus, and other illnesses that can range from inconvenient to disabling or worse, especially for colleagues who are immunocompromised.</p>
 
 <p>You can be contagious and not have any symptoms; home COVID tests are not 100% accurate. Please keep this in mind when we share space together. If you are feeling ill, we ask that you not attend events in our space; please <a href="mailto:scholarslab@virginia.edu">contact us</a> to request virtual consultation or event attendance options.</p>
 
 <p>We have extra masks available for attendees of events in our space who want one.</p>
 
-<h3>Mobility & distance</h3>
-<p>Directions on accessing our space from the nearest parking and elevators; gendered, gender-neutral, and family restrooms; lactation room; as well as any intervening barriers to physical access, will appear on our <a href="/use-the-lab">"Use the Lab" page</a> soon.</p>
+<h3>Mobility, distance, & space use</h3>
+<p>Directions on accessing our space are available on our <a href="/use-the-lab">"Use the Lab" page</a>.</p>
 
 <p>Our new makerspace room (Shannon 308i) was designed with physical access in mind, and includes options like worktables that can be raised and lowered to wheelchair sitting and standing heights. Please contact <a href="/people/ammon-shepherd">Makerspace Manager Ammon Shepherd</a> if you have questions about physical makerspace access.</p>
+
+Some doors in the Shannon Library building do not currently offer push-button door-openers. These include several of our public doors, most of which we prop open during work hours (makerspace, consultation room, both entrances, grad office, doors between Text Aisle and Common Room). The door into our staff workroom space, behind which are several staff offices and our grad office, doesn't have a door-opener button and cannot be left propped open (due to the interior containing non-public space).
 
 <h2>Ongoing learning & research on accessibility</h2>
 <p>Below are our research blog posts related to accessibility:</p>
