--- a/pages/visit/use-the-lab.html
+++ b/pages/visit/use-the-lab.html
@@ -31,7 +31,7 @@ redirect_from:
 <img src=/assets/img/space-maps/CroppedForWebsite_LayoutMap_3rdFloorShannon_SLab_HighLevel.png alt="A map showing Scholars' Lab's place on the 3rd floor of Shannon Library" class="3rdFlr-map">
 
 <h3>Hours</h3>
-<p>Unless reserved for a special event, the Scholars’ Lab is open whenever Shannon Library is open.</p>
+<p>Unless reserved for a special event, the Scholars’ Lab is open whenever Shannon Library is open; Scholars' Lab's Makerspace is open for a subset of those hours that varies by term:</p>
 
 <p>
 <!-- To generate for these or other space hours, use LibCal>Admin>Hours>Widgets>Weekly Grid View https://cal.lib.virginia.edu/admin/hours/widgets#s-lc-tab-widgets -->
@@ -98,7 +98,7 @@ var week2090 = new $.LibCalWeeklyGrid( $("#s-lc-whw2090"), { iid: 863, lid: 2090
 <h3>Use of the Spaces</h3>
 <p>The Scholars’ Lab public space supports a number of activities, including digital project presentations, collaborative project development, speaker events, workshops, technology demonstrations, instruction sessions, and interest groups./<p>
 
-<p>Reservations for the presentation and VR spaces are available by appointment, with prior approval of Scholars’ Lab staff. If you have use requests or special event proposals, please send them to [scholarslab@virginia.edu](mailto:scholarslab@virginia.edu). Spaces may not be reserved for regular (semester-long) courses, student meetings, or group study.</p>
+<p>Reservations for the presentation and VR spaces are available by appointment, with prior approval of Scholars’ Lab staff. If you have use requests or special event proposals, please send them to <a href="mailto:scholarslab@virginia.edu">scholarslab@virginia.edu</a>. Spaces may not be reserved for regular (semester-long) courses, student meetings, or group study.</p>
 
 
 <!--
