Various page & link updates...
* Added ID anchor to "using the makerspace" inside /makerspace
* Link to that from /visit body content
* Tried to link from nav dropdown by changing link in config, but currently not working??? Had to remove my change from config file to push this (was makerspace/#using-the-makerspace)
* finished /visit page text
* /accessibility format fix

--- a/pages/consult/makerspace/makerspace.html
+++ b/pages/consult/makerspace/makerspace.html
@@ -299,7 +299,7 @@ order: 3
 
   <div class="makerspace__resources">
     <div class="maker-inventory__title">Makerspace Resources</div>
-    <h3>Using the Makerspace</h3>
+    <div id="using-the-makerspace"><h3>Using the Makerspace</h3></div>
     <div class="maker-usage__content">
       <p>
         The Makerspace is open to all UVA students, staff and faculty,
