Mid-way fixing makerspace HTML for new CSS...
Preserving aspects of Ammon's design he probably wants to keep, but cleaning up so general cross-site theming can apply too

--- a/pages/consult/makerspace/makerspace.html
+++ b/pages/consult/makerspace/makerspace.html
@@ -8,8 +8,18 @@ nav: true
 order: 3
 ---
 
-<div class="makerspace-main-content">
+<div class="makerspace-mission-vision-top">
+<div class="makerspace__mission">
+	<h2>Mission</h2>
+	<p>All humans are dreamers, creators, and achievers. Our mission is to provide the place, the tools, and the support to empower people to dream, create, and achieve.</p>
+</div>
+<div class="makerspace__vision">
+	<h2>Vision</h2>
+	<p>The Scholars&rsquo; Lab Makerspace is strategically situated within the UVA Library to be open, provide a low barrier of entry to making, and be a helpful resource of information, technology and support. The space invites all people, and proactively encourages those in underrepresented academic studies, ethnicities, genders, economic classes and skill levels to come, learn, make, and be empowered to improve their education, research, and community. The Makerspace is an active participant in academic research through independent and collaborative work with scholars to explore, understand, and report on emerging technologies, methodologies and pedagogies in a variety of disciplines.</p>
+</div>
+</div> <!-- ends .makerspace-mission-vision-top -->
 
+<div class="makerspace-main-content">
 <div class="makerspace__map">
 	<div class="banner">
 		<h2>Location</h2>
@@ -56,16 +66,6 @@ order: 3
 <div class="makerspace__newsletter">
 	<h2>Newsletter!</h2>
 	<p>Subscribe to the monthly <a href="http://eepurl.com/hXIWCb">Makerspace newsletter</a>!</p>
-</div>
-
-<div class="makerspace__mission">
-	<h2>Mission</h2>
-	<p>All humans are dreamers, creators, and achievers. Our mission is to provide the place, the tools, and the support to empower people to dream, create, and achieve.</p>
-</div>
-
-<div class="makerspace__vision">
-	<h2>Vision</h2>
-	<p>The Scholars&rsquo; Lab Makerspace is strategically situated within the UVA Library to be open, provide a low barrier of entry to making, and be a helpful resource of information, technology and support. The space invites all people, and proactively encourages those in underrepresented academic studies, ethnicities, genders, economic classes and skill levels to come, learn, make, and be empowered to improve their education, research, and community. The Makerspace is an active participant in academic research through independent and collaborative work with scholars to explore, understand, and report on emerging technologies, methodologies and pedagogies in a variety of disciplines.</p>
 </div>
 
 <div class="makerspace__resources">
@@ -205,4 +205,4 @@ order: 3
 		</ul>        
 </div>
 
-</div><!-- end main content -->
+</div><!-- ends .makerspace-main-content -->
