Adds ID attribute for using the makerspace.

--- a/pages/consult/makerspace/makerspace.html
+++ b/pages/consult/makerspace/makerspace.html
@@ -68,7 +68,7 @@ order: 3
 	<p>Subscribe to the monthly <a href="http://eepurl.com/hXIWCb">Makerspace newsletter</a>!</p>
 </div>
 
-<div class="makerspace__resources">
+<div id="using-the-makerspace" class="makerspace__resources">
 	<h2>Makerspace Resources</h2>
 		<h3>Using the Makerspace</h3>
 		<p>The Makerspace is open to all UVA students, staff and faculty, regardless of department, major, academic or personal interests, or any other characteristic. We are also open to the general public. We hope you will find the equipment, resources and support to help you MAKE anything (within reason) you want to make. Everything in the space is free for you to use including 3D printer filament, resin, cloth, etc.</p>
@@ -191,18 +191,18 @@ order: 3
 			<li><span>Megan Masri::</span> Button Making, Stickers</li>
 			<li><span>Qianqian Shao:</span> Fabrics, Textiles, Sewing</li>
 			<li><span>Hans Yang:</span> 3D printing</li>
-		</ul>      
+		</ul>
  		<h3>Makerspace Manager &amp; Lead Research Technologist</h3>
 		<ul>
 			<li><span>Ammon Shepherd:</span> 3D Printing, Electronics, Programming, Web Development, Digital Humanities, Sewing, Laser Cutter, CNC Router, Arduino, Raspberry Pi, 3D Modeling</li>
-		</ul>         
+		</ul>
  		<h3>Scholars&rsquo; Lab Staff Technologists</h3>
 		<ul>
 			<li><span>Laura Miller:</span> 3D Printing, Photogrammetry, Digital Humanities</li>
 			<li><span>Shane Lin:</span> 3D Printing, Programming, Digital Humanities</li>
 			<li><span>Jeremy Boggs:</span> 3D Printing, Electronics, Programming, Digital Humanities</li>
 			<li><span>Amanda Wyatt Visconti:</span> Digital Humanities, resin casting</li>
-		</ul>        
+		</ul>
 </div>
 
 </div><!-- ends .makerspace-main-content -->
