--- a/pages/events/events.html
+++ b/pages/events/events.html
@@ -8,10 +8,11 @@ redirect_from:
   - /events
 ---
 <header><hgroup>
-<p>Current and upcoming events hosted, sponsored, or partnered on by the Scholars' Lab. (<a href="/event-archive">See past event archive</a>.)</p>
+<p>Current and upcoming events hosted, sponsored, or partnered on by the Scholars' Lab.</p>
 </hgroup></header>
 
 <div class="content">
+<h2>Upcoming events</h2>
 {% assign events = site.events | sort: 'start_date' %}
 {% assign today = site.time | date: '%Y%m%d' | plus: 0 %}
 {% for event in events %}
@@ -43,4 +44,29 @@ redirect_from:
 	{% endif %}
 {% endfor %} <!-- end event -->
 
-</div>
+<h2>Recent events</h2>
+<p>Any events from this academic year that have already happened. Events from before this academic year can be found in our (<a href="/event-archive">past event archive</a>.</p>
+
+<ul class="page-previous_posts">
+	{% for event in events %}
+		{% assign eventdate = event.start_date | date: '%Y%m%d' | plus:0 %}
+		{% if eventdate >= today %}
+			{% continue %}
+		{% endif %}
+		{% assign currentyear = event.start_date | date: "%Y" %}
+		{% if currentyear != year %}
+			{% unless forloop.first %}
+				</ul>
+			{% endunless %}
+			<h3>{{ currentyear }}</h3>
+			<ul>
+			{% assign year = currentyear %}
+		{% endif %}
+		<li><a href="/events/{{ event.slug }}">{{ event.title }}</a> ({{ event.start_date | date: "%A, %B %-d, %Y" }})</li>
+		{% if forloop.last %}
+			</ul>
+		{% endif %}
+	{% endfor %}
+</ul>
+
+</div> <!-- ends .content -->
