Lots of text work...
* working on porting Laura's text changes to pages, including homepage

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@ title: Home
             approaches. Our international scholarly leadership lets us connect
             UVA colleagues to the forefront of digital and experimental
             scholarship, collaborators, and opportunities.</p>
+            <p><a href="/about">>>> Our Mission</a></p>
     </div>
     <figure>
         <img src="" alt="">
@@ -90,17 +91,18 @@ title: Home
             with questions, or to schedule a teaching or research consultation.
             Our staff has particular strengths in:
         <ul>
-            <li>digital humanities</li>
-            <li>DH project design & development</li>
-            <li>collaborative project management</li>
-            <li>digital pedagogy</li>
-            <li>GIS/mapping & analysis</li>
-            <li>cultural heritage informatics</li>
-            <li>3D laser scanning & photogrammetry</li>
-            <li>3D printing, making, & electronics</li>
-            <li>and virtual/augmented reality</li>
+            <li><a href="/critical-DH">the critical digital humanities</a></li>
+            <li><a href="/code-design">code & design</a></li>
+            <li><a href="/people/ronda-grizzle">collaborative project design & management</a></li>
+            <li><a href="/dh-pedagogy">digital pedagogy</a></li>
+            <li><a href="/spatial-technologies">GIS/mapping & analysis</a></li>
+            <li><a href="/spatial-technologies">cultural heritage informatics</a></li>
+            <li><a href="/spatial-technologies">3D laser scanning & photogrammetry</a></li>
+            <li><a href="/makerspace">3D printing, making, & electronics</a></li>
+            <li><a href="/spatial-technologies">virtual/augmented reality</a></li>
         </ul>
         </p>
+        <p><a href="/consult">>>> Our Expertise</a></p>
     </div>
     <figure>
         <img src="/assets/img/makerspace/printmaking1.jpg" alt="">
