--- a/pages/consult/dh-pedagogy/dh-pedagogy.html
+++ b/pages/consult/dh-pedagogy/dh-pedagogy.html
@@ -5,13 +5,14 @@ permalink: /dh-pedagogy/
 nav: true
 ---
 
-<!-- Add invitation for how/who to get in touch with? -->
+<h2>Pedagogical Consultation & Collaboration</h2>
 
-The lab offers expertise in digital humanities (DH) and experimental scholarship pedagogies, including at the undergraduate, graduate, and post-graduate levels. We offer consultation, syllabus review, co-teaching, and other forms of support for developing digital pedagogy and implementing it in the classroom, and our leadership and participation in the <a href="/critical-dh">external DH community</a> allows us to inform and be informed by the latest DH pedagogy research and practice.
+<p>The lab offers expertise in digital humanities (DH) and experimental scholarship pedagogies, including at the undergraduate, graduate, and post-graduate levels. We offer consultation, syllabus review, co-teaching, and other forms of support for developing digital pedagogy and implementing it in the classroom, and our leadership and participation in the <a href="/critical-dh">external DH community</a> allows us to inform and be informed by the latest DH pedagogy research and practice.</p>
 
-We frequently publish on critical digital pedagogies, including in peer-reviewed journals such as <a href="https://cuny.manifoldapp.org/read/a-way-in-digital-pedagogy-training-with-speculative-low-tech-workshops/section/d26fab6f-c473-489a-9516-a6e6f0c747a7">The Journal of Interactive Technology and Pedagogy</a>; in edited volumes including <em>The Digital Futures of Graduate Study in the Humanities</em> and <em>What We Teach When We Teach DH: Digital Humanities in the Classroom</em>; and in other public formats such as <em><a href="https://digitalpedagogy.hcommons.org/">Digital Pedagogy in the Humanities: Concepts, Models, and Experiments</a></em> and <em>#DLFTeach Toolkit: Lesson Plans for Digital Library Instruction</em>. 
+<p>We frequently publish on critical digital pedagogies, including in peer-reviewed journals such as <a href="https://cuny.manifoldapp.org/read/a-way-in-digital-pedagogy-training-with-speculative-low-tech-workshops/section/d26fab6f-c473-489a-9516-a6e6f0c747a7">The Journal of Interactive Technology and Pedagogy</a>; in edited volumes including <em>The Digital Futures of Graduate Study in the Humanities</em> and <em>What We Teach When We Teach DH: Digital Humanities in the Classroom</em>; and in other public formats such as <em><a href="https://digitalpedagogy.hcommons.org/">Digital Pedagogy in the Humanities: Concepts, Models, and Experiments</a></em> and <em>#DLFTeach Toolkit: Lesson Plans for Digital Library Instruction</em>.</p>
 
-Our research blog offers a number of pieces related to critical digital pedagogies:
+<h2>Related research blogging</h2>
+<p>Our research blog offers a number of pieces related to critical digital pedagogies:</p>
 
 <ul>
 {%- for post in site.tags.pedagogy -%}
