--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ title: Home
                 <time>
                     <span>{{ event.start_date | date: '%b' }}</span>
                     <span>{{ event.start_date | date: '%d' }}</span>
-                </time>
+                </time>: 
                 <strong>{{ event.title }}</strong>
                 </a>
             </li>
@@ -101,40 +101,53 @@ title: Home
             <li><a href="/makerspace">3D printing, making, & electronics</a></li>
             <li><a href="/spatial-technologies">virtual/augmented reality</a></li>
         </ul>
-        </p>
-        <p><a href="/consult">>>> Our Expertise</a></p>
+		<a href="/consult">>>> Our Expertise</a>
+		</p>
     </div>
     <figure>
         <img src="/assets/img/makerspace/printmaking1.jpg" alt="">
         <figcaption>
-            <p>Lorem ipsum dolor sit amet.</p>
+            <p>Printmaking in Scholars' Lab's makerspace.</p>
         </figcaption>
     </figure>
 </section>
 
 <section class="feature" id="lab-space-and-makerspace">
-    <h2>Lab Space & Makerspace</h2>
+    <h2>Using the Lab & Makerspace</h2>
     <div>
         <h3>THE LAB</h3>
         <p>The Scholars’ Lab includes staff offices, co-working areas, an event
-            space, a VR immersion space (<< LINK #tk), and data processing
+            space, a VR immersion space, and data processing
             workstations. Appointments are encouraged if you want to meet a
-            particular staff member or ensure access to specific equipment
-            (<< Reservation info LINK #tk), though the space itself is open
-            whenever Shannon Library is open.</p>
+            <a href="/people">particular staff member</a> or 
+            <a href="mailto:lam2c@virginia.edu">request access</a> to specific equipment,
+            though the space itself is open
+            whenever <a href="https://www.library.virginia.edu/hours/">Shannon Library</a> is open.</p>
+        <p><a href="/visit">>>> Using the Lab & Makerspace</a></p>
     </div>
     <div>
         <h3>THE LAB'S MAKERSPACE</H3>
-        <p>The Makerspace is a place for tinkering and experimentation
+        <p>Our <a href="/makerspace">Makerspace</a> is a place for tinkering and experimentation
             with technologies like circuitry, 3D printing, and laser
             cutting. Open to everyone, we specialize in applications and
             research questions in the humanities and arts. The
             Makerspace staff provides consultation and instruction
-            whenever the Makerspace is open, or by appointment. Please
-            drop in, or send inquiries to <a
-                href="mailto:slabmakerspace@virginia.edu">slabmakerspace@virginia.edu</a>.</p>
+            <a href="https://www.library.virginia.edu/hours/">whenever the Makerspace is open</a>, or by appointment. Please drop in, or send inquiries to <a href="mailto:slabmakerspace@virginia.edu">slabmakerspace@virginia.edu</a>.</p>
     </div>
 </section>
+
+<section id="critical-digital-humanities" class="feature">
+    <div>
+        <h2>Critical Digital Humanities</h2>
+        <p>We use “critical” DH here to mean purposeful engagements with the field and community of DH scholarship, including its writings, theory, and international community. Much of the lab’s work draws on our strong DH background (including for non-DH projects and people!) and many of our staff identify as digital humanists and maintain a high level of engagement in external, international DH leadership, service, and community.</p>
+		<p><a href="/critical-dh">>>> Critical DH</a></p>
+    </div>
+    <figure>
+        <img src="" alt=""></img>
+        <figcaption></figcaption>
+    </figure>
+</section>
+
 <section id="digital-humanities-code-design" class="feature">
     <div>
         <h2>Digital Humanities Code + Design</h2>
@@ -144,6 +157,7 @@ title: Home
             learning, text analysis, and more. Our particular strengths lie in
             the critical pedagogical and scholarly application of those
             technologies for the humanities.</p>
+		<p><a href="/design-code">>>> DH Code + Design</a></p>
     </div>
     <figure>
         <img src="" alt=""></img>
@@ -160,6 +174,7 @@ title: Home
                 href="mailto:spatial@virginia.edu">spatial@virginia.edu</a> to
             schedule an individual consultation or course instruction session.
         </p>
+		<p><a href="/design-code">>>> Spatial Technologies</a></p>
     </div>
     <figure>
         <img src="" alt="">
@@ -172,11 +187,12 @@ title: Home
         <h2>Fellowships + Training</h2>
         <p>We support the work of emerging scholars and digital humanities
             practitioners. In addition to our general consultations, we offer
-            three graduate fellowship programs that provide students with the
+            <a href="/for-students">three graduate fellowship programs</a> that provide students with the
             time, space, and mentorship necessary to discover, explore, and
             build. We also offer a wide variety of opportunities for students
             and faculty to gain training and experience as digital humanists.
         </p>
+		<p><a href="/opportunities">>>> Opportunities</a></p>
     </div>
     <figure>
         <img src="" alt="">
