--- a/pages/consult/makerspace/makerspace.html
+++ b/pages/consult/makerspace/makerspace.html
@@ -2,34 +2,29 @@
 layout: page
 title: Makerspace
 permalink: /makerspace/
-excerpt: "Our makerspace is a place for crafting, tinkering, and experimentation with technologies like 3D printing,
-textiles, electronics and physical computing. Open to everyone."
+excerpt: "A welcoming space for creative crafting, tinkering, and experimentation with technologies like 3D printing,
+fabric arts, electronics, and physical computing. Open to everyone."
 nav: true
 order: 3
 ---
 
 <div class="makerspace-mission-vision-top">
-<div class="makerspace__mission">
-	<h2>Mission</h2>
-	<p>All humans are dreamers, creators, and achievers. Our mission is to provide the place, the tools, and the support to empower people to dream, create, and achieve.</p>
-</div>
-<div class="makerspace__vision">
-	<h2>Vision</h2>
-	<p>The Scholars&rsquo; Lab Makerspace is strategically situated within the UVA Library to be open, provide a low barrier of entry to making, and be a helpful resource of information, technology and support. The space invites all people, and proactively encourages those in underrepresented academic studies, ethnicities, genders, economic classes and skill levels to come, learn, make, and be empowered to improve their education, research, and community. The Makerspace is an active participant in academic research through independent and collaborative work with scholars to explore, understand, and report on emerging technologies, methodologies and pedagogies in a variety of disciplines.</p>
-</div>
+	<h2>Mission + Vision</h2>
+	<p>All humans are dreamers, creators, and achievers. Our mission is to provide the place, the tools, and the support to empower people to do just that. The Scholars' Lab Makerspace is strategically situated within the UVA Library to be open, provide a low barrier of entry to making, and be a helpful resource of information, technology and support. Our space is open to everyone, including the public, and proactively encourages those in underrepresented academic studies, ethnicities, genders, economic classes and skill levels to come learn, make, and research.</p>
 </div> <!-- ends .makerspace-mission-vision-top -->
 
 <div class="makerspace-main-content">
-<div class="makerspace__map">
+
+<div class="makerspace-location-hours">
+<h2>Location + Hours</h2>
 	<div class="banner">
-		<h2>Location</h2>
+	<h3>Map</h3>
 		<p>The Scholars' Lab Makerspace is on the 3rd floor of Edgar Shannon Library.</p>
 		<p><img src="/assets/img/makerspace/3rd-floor.png" alt="The Makerspace is located on the 3rd floor, East Wing, in the South end of the wing."/></p>
 	</div>
 </div>
-
-<div class="makerspace__hours">
-    <h2>Open Hours and Access</h2>
+<div>
+    <h3>Open Hours + Access</h3>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cal.lib.virginia.edu/js/hours_grid.js?002"></script>
     <div id="s-lc-whw2093"></div>
@@ -71,9 +66,9 @@ order: 3
 <div id="using-the-makerspace" class="makerspace__resources">
 	<h2>Makerspace Resources</h2>
 		<h3>Using the Makerspace</h3>
-		<p>The Makerspace is open to all UVA students, staff and faculty, regardless of department, major, academic or personal interests, or any other characteristic. We are also open to the general public. We hope you will find the equipment, resources and support to help you MAKE anything (within reason) you want to make. Everything in the space is free for you to use including 3D printer filament, resin, cloth, etc.</p>
+		<p>The Makerspace is open to all UVA students, staff and faculty, as well as the general public. We hope you will find the equipment, resources, and support to help you MAKE anything (within reason) you want to make.</p>
 		<p>You can stop in any time during our open hours, or contact us at <a href="mailto:slabmakerspace@virginia.edu">slabmakerspace@virginia.edu</a> to schedule an appointment with a Makerspace Technologist or Scholars&rsquo; Lab staff to discuss your project.</p>
-		<p>We love working with faculty to support class projects! Send your requests and ideas to our Makerspace Manager, Ammon Shepherd, at <a href="mailto:ammon@virginia.edu">ammon@virginia.edu</a>.</p>
+		<h3>Equipment</h3>		
 		<p>All equipment can be reserved for use in the Makerspace. Use the <button id="eq_0" href="#">Book Equipment</button>
         	<script src="https://cal.lib.virginia.edu/js/widget.min.js"></script>
 			<script>
@@ -88,11 +83,16 @@ order: 3
 					})
 				})
 			</script>
-		button to book equipment, or visit <a target="_blank" href="https://cal.lib.virginia.edu/reserve/equipment/Makerspace">the equipment page</a>to see a full list of our equipment.</p>
+		button to book equipment, or visit <a target="_blank" href="https://cal.lib.virginia.edu/reserve/equipment/Makerspace">the equipment page</a> to see a full list of our equipment.</p>
 		<p>
         All equipment is maintained for use in the Makerspace and is not available for check out at this time. Don't see the equipment you need here? Visit <a href="http://makergrounds.virginia.edu">makergrounds.virginia.edu</a> for other shops, labs, and places for making at UVA.</p>
 		<p>Questions? Hesitant about joining us in the Makerspace? You belong here, and we're happy to meet with you, answer questions, and give you a tour to help you feel more at home. Email <a href="mailto:slabmakerspace@virginia.edu">slabmakerspace@virginia.edu</a> to let us know you're curious about our Makerspace.</p>
+		<h3>Faculty Consultations + Course Integrations</h3>
+				<p>Our Makerspace is an active participant in academic research. We support scholars' independent and collaborative work to explore, understand, and report on emerging technologies, methodologies, and pedagogies in a variety of disciplines. We love working with faculty to support class projects! Send your requests and ideas to our Makerspace Manager <a href="ammon@virginia.edu">Ammon Shepherd</a>.</p>	
 </div>
+
+<div>
+<h2>What's in the makerspace</h2>
 
 <div class="maker-resource__textiles darker-background">
 	<h3>Textiles</h3>
@@ -113,8 +113,8 @@ order: 3
 <div class="maker-resource__3Dprinters lighter-background">
 	<h3>3D Printing</h3>
 			<p>We have four <a href="https://en.wikipedia.org/wiki/Fused_filament_fabrication">FFF</a> style printers and one <a href="https://en.wikipedia.org/wiki/Stereolithography">Resin (SLA)</a> printer available for reservation. To use the printers, you can come in during open hours for in-person training and on-the-spot reservation. In order to reserve printers for future use, you will need to complete an on-line certification. The on-line certification is forthcoming, so the only way to use the 3D printers for now is to come in during open hours and speak with a Technologist to reserve a printer after in-person training.</p>
-			<p>3D printing is still available through the 3D Printing Studio in the Robertson Media Center in Clemons Library. To use the printers there, you need to complete an <a href="https://www.library.virginia.edu/services/3d-printing/">online training</a>, then reserve a 3D printer during their <a href="https://www.library.virginia.edu/hours">open hours</a>. Email <a href="mailto:teachlearn@virginia.edu">teachlearn@virginia.edu</a> with any questions.</p>
- 			<p>The 3D printers are completely different from each other in each space, so training on 3D Printing Studio printers does not automatically grant access to the Makerspace printers, although the on-line training is similar.</p>
+			<p>Self-service 3D printing is also available through the <a href="https://www.library.virginia.edu/services/3d-printing/">3D Printing Studio</a> in the Robertson Media Center in Clemons Library. To use the printers there, you need to complete an <a href="https://www.library.virginia.edu/services/3d-printing/">online training</a>, then reserve a 3D printer during their <a href="https://www.library.virginia.edu/hours">open hours</a>. Email <a href="mailto:teachlearn@virginia.edu">teachlearn@virginia.edu</a> with any questions.</p>
+ 			<p>The 3D printers are completely different from each other in each space, so training on 3D Printing Studio printers does not automatically grant access to the Makerspace printers.</p>
  			<p>Click a printer below to check availability or reserve:</p>
  			<ul class="maker-resource__content">
  				<li><a href="https://cal.lib.virginia.edu/equipment/item/158454">
@@ -152,22 +152,30 @@ order: 3
 <a class="equipment_name" href="https://cal.lib.virginia.edu/equipment/item/158466">VLS 6.75 <br>(Vader)</a></li>
 		</ul>
 </div>
+<div>
+<h3>Full equipment list</h3>
+<p>See our full list of equipment, including electronics, crafting equipment, on the <a href="https://cal.lib.virginia.edu/equipment?lid=264">Library Equipment Reservation site</a>.</p>
+</div>
+
+</div> <!-- end what's in the makerspace section -->
 
 <div class="maker-resource__other lighter-background">
-	<h3>Other Resources</h3>
-	<h4 id="workshop-links">Workshops</h4>
-		<p>Sign up for our events and workshops on the <a id="equipment-btn" href="https://cal.lib.virginia.edu/calendar/events?cid=4299&t=d&d=0000-00-00&cal=4299&ct=46484&inc=0">Library Calendar</a></p>
-	<h4 id="teach-workshop-links">Resources to teach a workshop</h4>
-		<ul class="other-links">
+	<h2>Learning Resources</h2>
+		<h3 id="workshop-links">Workshops</h3>
+			<ul>
+			<li><a href="https://cal.lib.virginia.edu/calendar/events?cid=4299&t=d&d=0000-00-00&cal=4299&ct=46484&inc=0">Upcoming maker workshops</a></li>
+			<li>Want more? Sign up for the <a href="http://eepurl.com/hXIWCb">Makerspace newsletter</a>!</li>
+			</ul>
+		<h3 id="workshop-links">Self-directed tutorials</h3>
+			<ul>
+			<li><a href="https://ammonshepherd.github.io/arduino-tuts/" target="_blank">Arduino Tutorials</a></li>
+			<li><a href="https://ammonshepherd.github.io/git-for-beginners/" target="_blank" >Git for beginners</a></li>
+			<li><a href="https://ammonshepherd.github.io/make-a-website/" target="_blank" >Make a simple website</a></li>
+			</ul>			
+		<h3 id="workshop-links">Workshop-teaching resources</h3>
+			<ul>
 			<li><a href="/makerspace/workshops/arduino/">Arduino Workshop - Basics of Electricity and Circuits</a></li>
-		</ul>
-	<h4 id="tutorial-links">Tutorials</h4>
-	<p>Resources to learn at your own pace</p>
-	<ul class="other-links">
-		<li><a href="https://ammonshepherd.github.io/arduino-tuts/" target="_blank">Arduino Tutorials</a></li>
-		<li><a href="https://ammonshepherd.github.io/make-a-website/" target="_blank" >How to make a website</a></li>
-		<li><a href="https://ammonshepherd.github.io/git-for-beginners/" target="_blank" >Git for beginners</a></li>
-	</ul>
+			</ul>			
 </div>
 
 <div class="makerspace__people">
@@ -192,16 +200,32 @@ order: 3
 			<li><span>Qianqian Shao:</span> Fabrics, Textiles, Sewing</li>
 			<li><span>Hans Yang:</span> 3D printing</li>
 		</ul>
+		
  		<h3>Makerspace Manager &amp; Lead Research Technologist</h3>
 		<ul>
-			<li><span>Ammon Shepherd:</span> 3D Printing, Electronics, Programming, Web Development, Digital Humanities, Sewing, Laser Cutter, CNC Router, Arduino, Raspberry Pi, 3D Modeling</li>
+			<li>
+				<img src="{{ site.baseurl }}/assets/img/people/ammon-shepherd.jpg" alt="Ammon Shepherd">
+				<span><a href="{{ site.baseurl }}/people/ammon-shepherd">Ammon Shepherd:</a></span> 3D Printing, Electronics, Programming, Web Development, Digital Humanities, Sewing, Laser Cutter, CNC Router, Arduino, Raspberry Pi, 3D Modeling</div>
+			</li>
 		</ul>
  		<h3>Scholars&rsquo; Lab Staff Technologists</h3>
 		<ul>
-			<li><span>Laura Miller:</span> 3D Printing, Photogrammetry, Digital Humanities</li>
-			<li><span>Shane Lin:</span> 3D Printing, Programming, Digital Humanities</li>
-			<li><span>Jeremy Boggs:</span> 3D Printing, Electronics, Programming, Digital Humanities</li>
-			<li><span>Amanda Wyatt Visconti:</span> Digital Humanities, resin casting</li>
+			<li>
+				<img src="{{ site.baseurl }}/assets/img/people/laura-miller.jpg" alt="Laura Miller">
+				<div class="rd-person__name"><a href="{{ site.baseurl }}/people/laura-miller">Laura Miller</a>: 3D Printing, Photogrammetry, Digital Humanities</div>
+			</li>
+			<li>
+				<img src="{{ site.baseurl }}/assets/img/people/shane-lin.jpg" alt="Shane Lin">
+				<div class="rd-person__name"><a href="{{ site.baseurl }}/people/shane-lin">Shane Lin</a>: 3D Printing, Programming, Digital Humanities</div>
+			</li>
+			<li>
+				<img src="{{ site.baseurl }}/assets/img/people/jeremy-boggs.jpg" alt="Jeremy Boggs">
+				<div class="rd-person__name"><a href="{{ site.baseurl }}/people/jeremy-boggs">Jeremy Boggs</a>: 3D Printing, Electronics, Programming, Digital Humanities</div>
+			</li>
+			<li>
+				<img src="{{ site.baseurl }}/assets/img/people/amanda-visconti.jpg" alt="Amanda Wyatt Visconti">
+				<div class="rd-person__name"><a href="{{ site.baseurl }}/people/amanda-visconti">Amanda Visconti</a>: Digital Humanities, resin casting</div>
+			</li>
 		</ul>
 </div>
 
