use the lab page text + anchor for homepage reference

--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@ title: Home
             workstations. Appointments are encouraged if you want to meet a
             <a href="/people">particular staff member</a> or 
             <a href="mailto:lam2c@virginia.edu">request access</a> to specific equipment,
-            though the space itself is open
-            whenever <a href="https://www.library.virginia.edu/hours/">Shannon Library</a> is open.</p>
+            though the lab space itself is open
+            <a href="/use-the-lab#slab-hours">whenever Shannon Library is open</a>.</p>
         <p><a href="/visit">>>> Using the Lab & Makerspace</a></p>
     </div>
     <div>
