--- a/pages/visit/use-the-lab.html
+++ b/pages/visit/use-the-lab.html
@@ -8,27 +8,12 @@ redirect_from:
   - /locations
   - /about/hours-and-spaces
 ---
- 
-<h2>Location + Hours</h2>
-<p>The Scholars' Lab is located in the University of Virginia's Edgar Shannon Library (formerly Alderman), covering the 3rd floor east wing.</p>
 
-<p>From the Memorial Hall entrance (4th floor), we're one flight down. From the new McCormick Road entrance (2nd floor), we're one floor up. The UVA Library provides <a href="https://library.virginia.edu/maps">directions to the building</a>, including a <a href="https://library.virginia.edu/sites/default/files/2024-01/Building_Guide.pdf">guide to the new Shannon building</a>.</p>
+<h2>Welcome! We are glad you are here</h2>
+<p>The Scholars’ Lab, part of the Library’s Digital Humanities Center, is a gathering place—and a tech-enabled workspace for learning, exploration, and practice of digital scholarship. As a research center, we invite students, faculty, and community scholars who wish to ask new questions with and of technology, or to push disciplinary and methodological boundaries through new approaches.</p>
 
-<h3>Map</h3>
-
-<h4>Scholars' Lab Map</h4>
-
-<img src=/assets/img/space-maps/CroppedForWebsite_SLabMap.png alt="A map showing Scholars' Lab's place on the 3rd floor of Shannon Library" class="slab-map">
-
-<ul>
-<li>Violet: public space</li>
-<li>Yellow: mediated space (see hours, below)</li>
-<li>Red: private space (or by approved appointment/office hours/event)</li>
-</ul>
-
-<h4>Shannon 3rd Floor Map</h4>
-
-<img src=/assets/img/space-maps/CroppedForWebsite_LayoutMap_3rdFloorShannon_SLab_HighLevel.png alt="A map showing Scholars' Lab's place on the 3rd floor of Shannon Library" class="3rdFlr-map">
+<div id="slab-hours">
+<h2>Hours + Location Map</h2>
 
 <h3>Hours</h3>
 <p>Unless reserved for a special event, the Scholars’ Lab is open whenever Shannon Library is open; Scholars' Lab's Makerspace is open for a subset of those hours that varies by term:</p>
@@ -43,41 +28,29 @@ $(function(){
 var week2090 = new $.LibCalWeeklyGrid( $("#s-lc-whw2090"), { iid: 863, lid: 2090, systemTime: false }); 
 });
 </script> 
-
-<!-- Please note: The following styles are optional, feel free to modify! //-->
-<style>
-.s-lc-whw thead { background-color: #F5F5F5; }
-.s-lc-whw-head-date { color: #5F5F5F; }
-.s-lc-whw-today-h {  background-color: #ddd; }
-.s-lc-whw-today { background-color: #F5F5F5; }
-.s-lc-whw-bh { text-align: right; white-space: nowrap; }
-.s-lc-whw-locname { font-weight: bold;}
-.s-lc-whw-sublocname{ padding-left: 10px!important; }
-.s-lc-whw-footnote { color: #555; font-size: 80%; }
-.s-lc-whw-footnote td:hover { background-color:#fff!important;}
-/* Below styles can be removed if you are already using Bootstap v3 in host page */
-.s-lc-whw-cont {font-family: "Helvetica Neue",Helvetica,Arial,sans-serif; font-size: 12px;}
-.s-lc-whw-pr, .s-lc-whw-ne{ padding: 5px 10px; font-size: 12px; line-height: 1.5; border-radius: 3px; color: #333; background-color: #fff; border-color: #ccc; display: inline-block; margin-bottom: 0; font-weight: 400; text-align: center; vertical-align: middle; cursor: pointer; background-image: none; border: 1px solid transparent; white-space: nowrap; }
-.s-lc-whw-pr:disabled { background-color: #efefef; }
-.s-lc-whw-ne:disabled { background-color: #efefef; }
-.s-lc-whw { width: 100%; margin-bottom: 20px; max-width: 100%; background-color: transparent; border-bottom: none; border-left: none; border-collapse: collapse; border-spacing: 0; }
-.s-lc-whw>tbody>tr>td { padding: 5px; }
-.s-lc-whw>thead>tr>th { vertical-align: bottom; border-bottom: 2px solid #ddd; padding: 5px;}
-.s-lc-whw th { border-top: none; border-bottom: none; border-right: none;}
-.sr-only { position: absolute; width: 1px; height: 1px; padding: 0; margin: -1px; overflow: hidden; clip: rect(0,0,0,0); border: 0; }
-@media (max-width: 768px) {
-   .s-lc-whw-cont .table-responsive { width: 100%; margin-bottom: 15px; overflow-y: hidden; overflow-x: scroll; -ms-overflow-style: -ms-autohiding-scrollbar; border: 1px solid #ddd; -webkit-overflow-scrolling: touch; }
-   .s-lc-whw td { white-space: nowrap; }
-}
-</style>
-
 </p>
 
-<h2>Welcome: We are glad you are here</h2>
-<p>The Scholars’ Lab, part of the Library’s Digital Humanities Center, is a gathering place—and a tech-enabled workspace for learning, exploration, and practice of digital scholarship.</p>
+<h3>Location Map</h3>
+<p>The Scholars' Lab is located in the University of Virginia's Edgar Shannon Library (formerly Alderman), covering the 3rd floor east wing.</p>
 
-<p>As a research center, we invite students, faculty, and community scholars who wish to ask new questions with and of technology, or to push disciplinary and methodological boundaries through new approaches.</p>
+<p>From the Memorial Hall entrance (4th floor), we're one flight down. From the new McCormick Road entrance (2nd floor), we're one floor up. The UVA Library provides <a href="https://library.virginia.edu/maps">directions to the building</a>, including a <a href="https://library.virginia.edu/sites/default/files/2024-01/Building_Guide.pdf">guide to the new Shannon building</a>.</p>
 
+<h4>Scholars' Lab Map</h4>
+
+<img src=/assets/img/space-maps/CroppedForWebsite_SLabMap.png alt="A map showing Scholars' Lab's place on the 3rd floor of Shannon Library" class="slab-map">
+
+<ul>
+<li>Violet: public space</li>
+<li>Yellow: mediated space (see hours, below)</li>
+<li>Red: private space (or by approved appointment/office hours/event)</li>
+</ul>
+
+<h4>Shannon 3rd Floor Map</h4>
+
+<img src=/assets/img/space-maps/CroppedForWebsite_LayoutMap_3rdFloorShannon_SLab_HighLevel.png alt="A map showing Scholars' Lab's place on the 3rd floor of Shannon Library" class="3rdFlr-map">
+<!-- close div that contains linkable html anchor to hours info -->
+
+<h2>Spaces</h2>
 <p>Our public space includes:</p>
 <ul>
 <li>GIS &amp; 3D data processing workstations </li>
@@ -86,8 +59,6 @@ var week2090 = new $.LibCalWeeklyGrid( $("#s-lc-whw2090"), { iid: 863, lid: 2090
 <li>VR station for collaborative project development, immersive presentations, and demos</li>
 <li><a href="/makerspace">Makerspace</a> (Shannon 308i)</li>
 </ul>
-
-<h3>Spaces</h3>
 <ul>
 <li>Open co-work space (Scholars&#39; Lab Common Room, aka &quot;CR&quot;; Shannon 308)</li>
 <li>Teaching &amp; event space w/ projection (Scholars&#39; Lab Common Room, aka &quot;CR&quot;; Shannon 308)</li>
@@ -95,7 +66,7 @@ var week2090 = new $.LibCalWeeklyGrid( $("#s-lc-whw2090"), { iid: 863, lid: 2090
 <li>Digital Humanities Working Library (for reference/in-library use)</li>
 </ul>
 
-<h3>Use of the Spaces</h3>
+<h3>Use of Scholars' Lab Spaces</h3>
 <p>The Scholars’ Lab public space supports a number of activities, including digital project presentations, collaborative project development, speaker events, workshops, technology demonstrations, instruction sessions, and interest groups./<p>
 
 <p>Reservations for the presentation and VR spaces are available by appointment, with prior approval of Scholars’ Lab staff. If you have use requests or special event proposals, please send them to <a href="mailto:scholarslab@virginia.edu">scholarslab@virginia.edu</a>. Spaces may not be reserved for regular (semester-long) courses, student meetings, or group study.</p>
