Added lots of /work logos & text

--- a/collections/_work/cultural-heritage-informatic-documentation.html
+++ b/collections/_work/cultural-heritage-informatic-documentation.html
@@ -2,7 +2,7 @@
 collaborators: 
   - name: Will Rourk
     slug: will-rourk
-    role: 3D Data and Content Specialist
+    role: 3D Technologies Specialist
   - name: Arin Bennett
     slug: arin-bennett
     role: 3D Visualization Specialist
@@ -12,8 +12,8 @@ collaborators:
 layout: work
 slug: cultural-heritage-informatic-documentation
 title: 3D Cultural Heritage Informatics Documentation
-thumb-img: default-thumb.png
-banner-img: default-banner.png
+thumb-img: cultural-heritage-informatic-documentation-thumb.png
+banner-img: cultural-heritage-informatic-documentation-banner.png
 research-category: Student
 start-year: 2019
 end-year: 2019
