--- a/pages/scholarship/our-projects.html
+++ b/pages/scholarship/our-projects.html
@@ -36,7 +36,7 @@ redirect_from:
 </section>
 
 <section class="other-formats">
-	<h2>Other Formats</h2>
+	<h2>Other Scholarly Activities</h2>
 	<div class="collaborations">
 	<!-- Capture & markdownify code below allows us to manage the file as markdown (easier to add to list), but display within this HTML page as HTML.-->
 	<h3>Places we've collaborated at the University of Virginia</h3>
