--- a/collections/_work/3D-chi.html
+++ b/collections/_work/3D-chi.html
@@ -2,19 +2,19 @@
 collaborators: 
   - name: Will Rourk
     slug: will-rourk
-    role: 3D Data and Content Specialist
+    role: 3D Technologies Specialist
   - name: IATH
 layout: work
 slug: 3d-chi
-title: 3D Cultural Heritage Informatics
+title: 3D Cultural Heritage Informatics Website
 link: https://wordpress.its.virginia.edu/Cultural_Heritage_Data//data-2/
-thumb-img: default-thumb.png
-banner-img: default-banner.png
+thumb-img: 3Dculturalheritageinformatics-thumb.png
+banner-img: 3Dculturalheritageinformatics-banner.jpg
 research-category: Collaborations
 start-year: (before 2018)
 end-year: current
 ---
-<p>3D Data and Content Specialist Will Rourk specializes in 3D cultural heritage data, often working in collaboration with other Scholars' Lab staff (especially other staff on our <a href="https://scholarslab.lib.virginia.edu/spatial-technologies/">Spatial Technologies</a> team) as well as with IATH staff. Read more about <a href="https://scholarslab.lib.virginia.edu/spatial-technologies/">Spatial Technologies</a>, or focus on 3D cultural heritage informatics <a href="https://wordpress.its.virginia.edu/Cultural_Heritage_Data/">here</a>.</p>
+<p>3D Technologies Specialist Will Rourk specializes in 3D cultural heritage data, often working in collaboration with other Scholars' Lab staff (especially other staff on our <a href="https://scholarslab.lib.virginia.edu/spatial-technologies/">Spatial Technologies</a> team) as well as with IATH staff. Read more about his work on 3D cultural heritage informatics <a href="https://wordpress.its.virginia.edu/Cultural_Heritage_Data/">here</a>.</p>
 
 <p>Below are our research blog posts related to 3D CHI:</p>
 {% assign project_posts = site.posts | where: 'tags', '3dchi' %}
