--- a/collections/_work/zine-bakery.html
+++ b/collections/_work/zine-bakery.html
@@ -7,15 +7,17 @@ layout: work
 slug: zine-bakery
 title: "Zine Bakery @ Scholars' Lab"
 link: https://airtable.com/shr3DDj5X1uNPUzyn/tbl88Svfsrkg3YV5Z
-thumb-img: default-thumb.png
-banner-img: default-banner.png
+thumb-img: zinebakery-thumb.png
+banner-img: zinebakery-banner.png
 research-category: Internal Projects and Community Service
 start-year: 2018
 end-year: current
 ---
-<p>Amanda Wyatt Visconti maintains a collection of zines by authors and on topics of interest them (Zine Bakery), a majority subset of which are also of interest to the Lab and its community (Zine Bakery & Scholars' Lab), including zines on feminist approaches to technology, digital scholarship tutorials, creativity and making, and social justice advocacy.</p>
+<p>Amanda Wyatt Visconti maintains a collection of zines by authors and on topics of interest to them (Zine Bakery), a majority subset of which are also of interest to the Lab and its community (Zine Bakery & Scholars' Lab), including zines on feminist approaches to technology, digital scholarship tutorials, creativity and making, and social justice advocacy.</p>
 
-<p>The project includes:</p>
+<img src="{{ site.url }}/assets/img/work/zinebakery-atslab.png" alt="Logo for the Zine Bakery @ Scholars' Lab subset of the Zine Bakery project">
+
+<p>The Zine Bakery @Scholars' Lab  project includes:</p>
 <ul>
 <li>Copies of print zines distributed on a rack in SLab's Common Room public space</li>
 <li>A digital catalogue of zines, combining the zines we can distribute publicly with others we cannot distribute for various reasons (including only having a single non-reproducable copy in our collection, or zines purchased with staff personal funds).</li>
@@ -24,9 +26,13 @@ end-year: current
 </ul>
 
 <h2>Timeline</h2>
+<ul>
 <li>The project began pre-pandemic as personal collecting, quickly followed by distribution of a subset of Visconti's personal zine collecting through a Scholars' Lab "Zine Wall" in a semi-public space that offered free copies of interesting zines as they happen upon them, and via cross-Library working group meetings and a Slack channel.</li>
 <li>The zine project was virtual-only during the renovation of SLab's physical space in the Main Library (2020-2023).</li>
-<li>In 2024, zines returned to our public space in the renovated Shannon Library (SLab Common Room, Shannon 308).</li>
+<li>Spring 2024: zines returned to our public space in the renovated Shannon Library (SLab Common Room, Shannon 308).</li>
+<li>Spring 2024: Amanda published a peer-reviewed journal article on their zine research: [“Book Adjacent: Database & Makerspace Prototypes Repairing Book-Centric Citation Bias in DH Working Libraries”](https://dhandlib.org/2024/04/29/book-adjacent-database-makerspace-prototypes-repairing-book-centric-citation-bias-in-dh-working-libraries/).</li>
+<li>Summer 2024: Amanda created the [ZineBakery.com](https://zinebakery.com) site and [zine cover viz/quilt](https://zinebakery.com/pages/zine-quilt/). Amanda presented on the Zine Bakery at the international Digital Humanities 2024 conference during August 2024.</li>
+</ul>
 
 <h2>Policy</h2>
 <p>We welcome visitors to leave zines in our Common Room (Shannon 308) that they'd like us to distribute there, and/or include a copy in our non-public zine backup archive; you are also welcome to email us digital versions of zines.</p>
