Added temp favicon, temp homepage photos

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ title: Home
 		</p>
     </div>
     <figure>
-        <img src="/assets/img/makerspace/printmaking1.jpg" alt="">
+        <img src="/assets/img/decorative/lab-photos-decorative/homepage-printmaking.jpg" alt="Decorative photo of several inked linoleum blocks from printmaking in SLab's makersace">
         <figcaption>
             <p>Printmaking in Scholars' Lab's makerspace.</p>
         </figcaption>
@@ -177,7 +177,7 @@ title: Home
 		<p><a href="/design-code">>>> Spatial Technologies</a></p>
     </div>
     <figure>
-        <img src="" alt="">
+        <img src="/assets/img/decorative/lab-photos-decorative/homepage-spatialtechnologies.jpg" alt="Decorative photo of Scholars' Lab staff working with students outdoors and in museums capturing cutural heritage data">
         <figcaption></figcaption>
         </img>
     </figure>
@@ -195,7 +195,7 @@ title: Home
 		<p><a href="/opportunities">>>> Opportunities</a></p>
     </div>
     <figure>
-        <img src="" alt="">
+        <img src="/assets/img/decorative/lab-photos-decorative/homepage-opportunities.jpg" alt="Decorative photo of Scholars' Lab fellows working with staff outdoors on a location-based augmented reality research project">
         <figcaption></figcaption>
         </img>
     </figure>
