More fine-for-launch homepage photos

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ title: Home
             <p><a href="/about">>>> Our Mission</a></p>
     </div>
     <figure>
-        <img src="" alt="">
+        <img src="/assets/img/decorative/lab-photos-decorative/homepage-about-us.jpeg" alt="Decorative photo of Scholars' Lab staff and students scanning a cultural heritage artifact">
         <figcaption>
 
         </figcaption>
@@ -143,7 +143,7 @@ title: Home
 		<p><a href="/critical-dh">>>> Critical DH</a></p>
     </div>
     <figure>
-        <img src="" alt=""></img>
+        <img src="/assets/img/decorative/lab-photos-decorative/homepage-criticaldh.jpg" alt="Decorative photo of Scholars' Lab fellows working with staff outdoors on a location-based augmented reality research project">
         <figcaption></figcaption>
     </figure>
 </section>
@@ -160,7 +160,7 @@ title: Home
 		<p><a href="/design-code">>>> DH Code + Design</a></p>
     </div>
     <figure>
-        <img src="" alt=""></img>
+                <img src="/assets/img/decorative/lab-photos-decorative/homepage-code-and-design.png" alt="Decorative screenshot of Scholars' Lab fellows James Ascher and Sarah Berkowitz's digital textual research project completed with the lab">
         <figcaption></figcaption>
     </figure>
 </section>
@@ -195,7 +195,7 @@ title: Home
 		<p><a href="/opportunities">>>> Opportunities</a></p>
     </div>
     <figure>
-        <img src="/assets/img/decorative/lab-photos-decorative/homepage-opportunities.jpg" alt="Decorative photo of Scholars' Lab fellows working with staff outdoors on a location-based augmented reality research project">
+        <img src="/assets/img/decorative/lab-photos-decorative/homepage-opportunities.jpg" alt="Decorative photo of Scholars' Lab fellows posing in the library">
         <figcaption></figcaption>
         </img>
     </figure>
