All homepage images have captions

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ title: Home
     <figure>
         <img src="/assets/img/decorative/lab-photos-decorative/homepage-about-us.jpeg" alt="Decorative photo of Scholars' Lab staff and students scanning a cultural heritage artifact">
         <figcaption>
-
+		3D scanning cultural heritage artifacts.
         </figcaption>
     </figure>
 </section>
@@ -106,9 +106,7 @@ title: Home
     </div>
     <figure>
         <img src="/assets/img/decorative/lab-photos-decorative/homepage-printmaking.jpg" alt="Decorative photo of several inked linoleum blocks from printmaking in SLab's makersace">
-        <figcaption>
-            <p>Printmaking in Scholars' Lab's makerspace.</p>
-        </figcaption>
+        <figcaption>Printmaking in Scholars' Lab's makerspace.</figcaption>
     </figure>
 </section>
 
@@ -144,7 +142,7 @@ title: Home
     </div>
     <figure>
         <img src="/assets/img/decorative/lab-photos-decorative/homepage-criticaldh.jpg" alt="Decorative photo of Scholars' Lab fellows working with staff outdoors on a location-based augmented reality research project">
-        <figcaption></figcaption>
+        <figcaption>Using augmented reality to contextualize race and historical place.</figcaption>
     </figure>
 </section>
 
@@ -161,7 +159,7 @@ title: Home
     </div>
     <figure>
                 <img src="/assets/img/decorative/lab-photos-decorative/homepage-code-and-design.png" alt="Decorative screenshot of Scholars' Lab fellows James Ascher and Sarah Berkowitz's digital textual research project completed with the lab">
-        <figcaption></figcaption>
+        <figcaption>Exploring literary texts through code and visualization.</figcaption>
     </figure>
 </section>
 <section id="spatial-technologies" class="feature">
@@ -178,7 +176,7 @@ title: Home
     </div>
     <figure>
         <img src="/assets/img/decorative/lab-photos-decorative/homepage-spatialtechnologies.jpg" alt="Decorative photo of Scholars' Lab staff working with students outdoors and in museums capturing cutural heritage data">
-        <figcaption></figcaption>
+        <figcaption>Investigating & preserving the past via museums, archives, and fieldwork</figcaption>
         </img>
     </figure>
 </section>
@@ -196,7 +194,7 @@ title: Home
     </div>
     <figure>
         <img src="/assets/img/decorative/lab-photos-decorative/homepage-opportunities.jpg" alt="Decorative photo of Scholars' Lab fellows posing in the library">
-        <figcaption></figcaption>
+        <figcaption>Collaborative research fellowships for the next generation of digital scholars.</figcaption>
         </img>
     </figure>
 </section>
